Aligment des icones admin ATL

--- a/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
@@ -43,7 +43,7 @@
                             <td>#ADRESSE</td>
                             <td>#COMMUNE</td>
                             <td>De #AGE_MIN à #AGE_MAX ans</td>
-                            <td>
+                            <td class="admin">
                                 [(#REM) Partie admin ]
                                 [<a href="[(#URL_PAGE{editer_activite,id_activite=#ID_ACTIVITE&id_organisme=#ID_ORGANISME})]">
                                     (#CHEMIN{images/admin_editer.png}|balise_img{Editer})
