--- a/squelettes/inclure/head-foundation-4.html
+++ b/squelettes/inclure/head-foundation-4.html
@@ -11,7 +11,21 @@
 [<script src="(#CHEMIN{foundation/foundation-4/js/vendor/custom.modernizr.js})"></script>]
 
 [(#REM) Foundation JS ]
-[(#CONFIG{foundation/javascript}|oui) [<script src="(#CHEMIN{foundation/foundation-4/js/foundation.min.js})"></script>] ]
+[(#CONFIG{foundation/javascript}|oui) 
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.dropdown.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.forms.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.orbit.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.placeholder.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.section.js})"></script>] 
+
+    [<script src="(#CHEMIN{foundation/foundation-4/js/foundation/foundation.tooltips.js})"></script>] 
+]
 
 [(#REM) Ce CSS règles les conflit entre les CSS de SPIP et ceux de Foundation ]
 [<link rel="stylesheet" href="(#CHEMIN{foundation/conflit_spip.css}|direction_css)" type="text/css" />]
