--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -82,8 +82,8 @@
     </div>
 
     <div id="pied" class="row">
-        <div id="copyright" class="large-6 columns">
-            Badje [(#DATE|affdate{Y})]
+        <div id="copyright" class="liens large-6 columns">
+            Badje [(#DATE|affdate{Y})] | Réalisation: <a href="http://www.vertige.org/" title="Vertige ASBL">Vertige ASBL</a>
         </div>
         <div class="liens large-6 columns">
             <a href="[(#URL_PAGE{plan})]">Site map</a> - <a href="[(#URL_PAGE{contact})]">Contact</a> - <a href="#URL_PAGE{admin}" title="Admin page">Admin</a>
