Gestion des couleurs dans les menus.

--- a/Page_intro/index.html
+++ b/Page_intro/index.html
@@ -68,7 +68,7 @@
         }
         
         .papier {
-            background: url(images/papier.png) no-repeat center;
+            background: url(images_intro/papier.png) no-repeat center;
             width: 841px;
             height: 711px;
             display: block;
@@ -130,10 +130,10 @@
 
         <ul>
             <li>
-                <a href="#" title=""><img src="images/vacance_scolaire.png" alt="Vancace Scolaire"></a>
+                <a href="badje/" title=""><img src="images_intro/vacance_scolaire.png" alt="Vancace Scolaire"></a>
             </li>
             <li class="annee">
-                <a href="#" title=""><img src="images/annee_scolaire.png" alt="Année Scolaire"></a>
+                <a href="index.php" title=""><img src="images_intro/annee_scolaire.png" alt="Année Scolaire"></a>
             </li>
         </ul>
     </div>
